changing source-paths to model-paths

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -4,7 +4,7 @@ config-version: 2
 
 profile: 'my_profile'
 
-source-paths: ["models"]
+model-paths: ["models"]
 target-path: "target"
 clean-targets: ["target"]
 
